<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgrey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Toolbar
            android:id="@+id/toolbarCart"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="CART"
                android:textColor="@android:color/white"
                android:textSize="@dimen/actionbar_title"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/clearCartButton"
                android:layout_width="60dp"
                android:layout_height="55dp"
                android:layout_gravity="end"
                android:backgroundTint="@android:color/transparent"
                android:clickable="true"
                android:onClick="clearcartButton"
                android:scaleType="fitXY"
                android:src="@drawable/clear_cart_icon" />

        </Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="20">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/cartRecyclerview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="1dp"
                android:layout_weight="12"
                android:background="@color/lightgrey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:gravity="end"
                android:orientation="horizontal"
                android:weightSum="5">

                <LinearLayout
                    android:id="@+id/ihfFC"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:text="IHF"
                            android:textColor="@color/grey"
                            android:textSize="@dimen/ihf_cart" />

                        <View
                            android:layout_width="38dp"
                            android:layout_height="2dp"
                            android:background="@color/bizzorange" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textViewIHFPer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="7dp"
                        android:text="10 %"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/ihf_cart" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="2.45"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="GRAND TOTAL"
                        android:textColor="@color/rupeegreen"
                        android:textSize="@dimen/vendor_grandtotal_amount_cart"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewGrandTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="7dp"
                        android:text="$ 9.99,99,999.00"
                        android:textColor="@color/rupeegreen"
                        android:textSize="@dimen/vendor_grandtotal_amount_cart"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@android:color/white">


                <LinearLayout
                    android:id="@+id/continueOrderingButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:background="@android:color/white">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/backarrow_orange_icon"
                        app:srcCompat="@drawable/backarrow_orange_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/continue_ordering"
                        android:textSize="@dimen/continue_ordering"
                        android:textColor="@color/bizzorange"
                        android:textStyle="bold"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_marginEnd="30dp">

                    <Button
                        android:id="@+id/paynowButton"
                        android:layout_width="300dp"
                        android:layout_height="130dp"
                        style="@style/paynow_button"
                        android:text="@string/pay_now"
                        android:textSize="@dimen/pay_now"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:orientation="horizontal"
                android:background="@android:color/white">

                <LinearLayout
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/youmayalsolike_title">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/you"
                        android:textSize="@dimen/ymal_title"
                        android:lineSpacingExtra="-4dp"
                        android:layout_marginTop="4dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/may"
                        android:textSize="@dimen/ymal_title"
                        android:lineSpacingExtra="-4dp"
                        android:layout_marginTop="5dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/also"
                        android:textSize="@dimen/ymal_title"
                        android:lineSpacingExtra="-4dp"
                        android:layout_marginTop="5dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/like"
                        android:textSize="@dimen/ymal_title"
                        android:lineSpacingExtra="-4dp"
                        android:layout_marginTop="5dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        />

                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/ymalRecyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/bizzblue" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>